--- a/src/views/game-view/game-view.scss
+++ b/src/views/game-view/game-view.scss
@@ -18,18 +18,30 @@
 		border-radius: 1em;
 		padding: 1em;
 
+		@media (max-width: 375px) {
+			border-radius: 0;
+		}
+
 		&__side-bar {
 			display: flex;
 			flex-direction: column;
 			justify-content: start;
 			text-align: center;
 			padding-left: 0.5em;
+
+			@media (max-width: 375px) {
+				padding-right: 0.5em;
+			}
 		}
 
 		&__grid {
 			text-align: center;
 			align-self: center;
 			padding-right: 0.5em;
+
+			@media (max-width: 375px) {
+				padding-right: 0.5em;
+			}
 		}
 
 		&__stats {
